# guilded_rs

./: Cargo.toml  readme.md
guilded_rs/: Cargo.toml  readme.md
guilded_rs/src/: bot.rs  bot_http.rs  lib.rs  task.rs
guilded_rs/src/command/: context.rs  handler.rs  mod.rs
guilded_rs/src/event/: mod.rs
guilded_rs/src/event/events/: announcement_comment_created.rs  announcement_comment_deleted.rs  announcement_comment_reaction_created.rs  announcement_comment_reaction_deleted.rs  announcement_comment_updated.rs  announcement_created.rs  announcement_deleted.rs  announcement_reaction_created.rs  announcement_reaction_deleted.rs  announcement_updated.rs  bot_server_membership_created.rs  bot_server_membership_deleted.rs  calendar_event_comment_created.rs  calendar_event_comment_deleted.rs  calendar_event_comment_reaction_created.rs  calendar_event_comment_reaction_deleted.rs  calendar_event_comment_updated.rs  calendar_event_created.rs  calendar_event_deleted.rs  calendar_event_reaction_created.rs  calendar_event_reaction_deleted.rs  calendar_event_rsvp_deleted.rs  calendar_event_rsvp_many_updated.rs  calendar_event_rsvp_updated.rs  calendar_event_series_deleted.rs  calendar_event_series_updated.rs  calendar_event_updated.rs  channel_message_reaction_created.rs  channel_message_reaction_deleted.rs  channel_message_reaction_many_deleted.rs  chat_message_created.rs  chat_message_deleted.rs  chat_message_updated.rs  doc_comment_created.rs  doc_comment_deleted.rs  doc_comment_reaction_created.rs  (+49 more)
guilded_rs/src/models/: chat_embed.rs  chat_message.rs  mod.rs
(+12 files in other folders)
