[package]
name = "guilded_rs"
version = "0.0.1"
edition = "2021"
authors = ["SafeShows <guilded.gg/u/SafeShows>"]
description = "Libary for creating bots in rust for guilded"
license = "CC-BY-NC-ND-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
websocket = "0.26.5"
iso8601-timestamp = "0.2.10"
reqwest = "0.11.18"
crossbeam = "0.8.2"
