[package]
name = "guilded_rs"
version = "1.0.0"
edition = "2021"
authors = ["SafeShows <guilded.gg/u/SafeShows>"]
description = "Libary for creating bots in rust for guilded"
license = "CC-BY-NC-ND-4.0"
readme = "../readme.md"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0.0"
websocket = "0.26.5"
iso8601-timestamp = "0.2.10"
reqwest = { version = "0.11.18", features = ["blocking"] }
crossbeam = "0.8.2"
